include/C/ox/Ox.cs


static class Ox
{
// basic mathematical and statistical functions and allocation/deallocation
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double c_abs(double xr, double xi);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 c_div(double xr, double xi, double yr, double yi, ref double zr, ref double zi);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void c_erf(double x, double y, ref double erfx, ref double erfy);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void c_exp(double xr, double xi, ref double yr, ref double yi);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void c_log(double xr, double xi, ref double yr, ref double yi);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void c_mul(double xr, double xi, double yr, double yi, ref double zr, ref double zi);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void c_sqrt(double xr, double xi, ref double yr, ref double yi);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DBessel01(double x, Int32 iType, Int32 n);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DBesselNu(double x, Int32 iType, double n);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DBetaFunc(double dX, double dA, double dB);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DDawson(double dX);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DDensBeta(double x, double a, double b);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DDensChi(double x, double dDf);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DDensF(double x, double dDf1, double dDf2);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DDensGamma(double g, double r, double a);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DDensGH(double dX, double dNu, double dDelta, double dGamma, double dBeta);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DDensGIG(double dX, double dNu, double dDelta, double dGamma);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DDensMises(double x, double dMu, double dKappa);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DDensNormal(double x);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DDensPoisson(double dMu, Int32 k);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DDensT(double x, double dDf);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DDiagXSXt(Int32 iT, IntPtr mX, IntPtr mS, Int32 cS);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DDiagXtSXtt(Int32 cX, IntPtr mXt, Int32 mS, Int32 cS);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void DecQRtMul(IntPtr mQt, Int32 cX, Int32 cT, IntPtr mY, Int32 cY, Int32 cR);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void DecQRtMult(IntPtr mQt, Int32 cX, Int32 cT, IntPtr mYt, Int32 cY, Int32 cR);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DErf(double z);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DExpInt(double z);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DExpInt1(double z);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DExpInte(double z);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DGamma(double z);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DGammaFunc(double dX, double dR);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DGetInvertEps();
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DGetInvertEpsNorm(IntPtr mA, double cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DLogGamma(double dA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DPolyGamma(double dA, Int32 n);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DProbBeta(double x, double a, double b);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DProbBVN(double dLo1, double dLo2, double dRho);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DProbChi(double x, double dDf);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DProbChiNc(double x, double df, double dNc);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DProbF(double x, double dDf1, double dDf2);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DProbFNc(double x, double dDf1, double dDf2, double dNc);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DProbGamma(double x, double dR, double dA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DProbMises(double x, double dMu, double dKappa);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DProbNormal(double x);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DProbPoisson(double dMu, Int32 k);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DProbT(double x, Int32 iDf);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DProbTNc(double x, double dDf, double dNc);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DQuanBeta(double x, double a, double b);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DQuanChi(double p, double dDf);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DQuanF(double p, double dDf1, double dDf2);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DQuanGamma(double p, double r, double a);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DQuanMises(double p, double dMu, double dKappa);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DQuanNormal(double p);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DQuanT(double p, Int32 iDf);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DQuanTD(double p, double dDf);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DRanBeta(double a, double b);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DRanChi(double dDf);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DRanExp(double dLambda);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DRanF(double dDf1, double dDf2);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DRanGamma(double dR, double dA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DRanGIG(double dNu, double dDelta, double dGamma);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DRanInvGaussian(double dMu, double dLambda);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DRanLogistic();
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DRanLogNormal();
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DRanMises(double dKappa);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DRanNormalPM();
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DRanStable(double dA, double dB);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DRanStudentT(double dDf);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DRanT(Int32 iDf);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DRanU();
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DTailProbChi(double x, double dDf);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DTailProbF(double x, double dDf1, double dDf2);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DTailProbGamma(double x, double dR, double dA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DTailProbNormal(double x);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DTailProbT(double x, Int32 iDf);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DTrace(IntPtr mat, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DTraceAB(IntPtr mA, IntPtr mB, Int32 cM, Int32 cN);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern double DVecsum(double[] vA, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void EigVecDiv(ref IntPtr mmE, double[] vEr, double[] vEi, Int32 cA);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 FCubicSpline(double[] vY, double[] vT, Int32 cT, ref double pdAlpha, double[] vG, double[] vX, ref double pdCV, ref double pdPar, Int32 fAuto, Int32 iDesiredPar);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 FCubicSplineTime(double[] vY, double cT, double dAlpha, ref Int32 vG, Int32 fHP);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 FFT1d(IntPtr mDest, IntPtr mSrc, Int32 iDir, Int32 isComplex);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void FftComplex(double[] vXr, double[] vXi, Int32 iPower, Int32 iDir);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void FftReal(double[] vXr, double[] vXi, Int32 iPower, Int32 iDir);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 FftDiscrete(double[] vXr, double[] vXi, Int32 cN, Int32 iDir);
